--- a/po/nl.po
+++ b/po/nl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-11-08 16:10+0100\n"
+"POT-Creation-Date: 2023-12-16 09:57+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Frenske <voorzitter@openpli.org>\n"
 "Language-Team: PLiteam <translators@openpli.org>\n"
@@ -169,6 +169,10 @@ msgstr "%a %e/%m"
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
 msgstr "%a %e/%m  %-H:%M"
+
+#, python-format
+msgid "%d"
+msgstr ""
 
 #, python-format
 msgid "%d MB"
@@ -1037,9 +1041,6 @@ msgstr "Kunst/Cultuur (zonder muziek)"
 msgid "Aruba"
 msgstr "Aruba"
 
-msgid "As defined by the skin"
-msgstr "Zoals bepaald in de skin"
-
 msgid "Ask user"
 msgstr "Vraag de gebruiker"
 
@@ -1087,13 +1088,13 @@ msgstr "Audio PID"
 
 #, python-format
 msgid "Audio PID%s, codec & lang"
-msgstr "Audio PID%s, codec & taal"
+msgstr "Audio PID%s, codec & lang"
 
 msgid "Audio auto volume level"
 msgstr "Automatisch volume"
 
 msgid "Audio description for the visually impaired"
-msgstr "Audiobeschrijving voor blinden en slechtzienden"
+msgstr "Audiobeschrijving voor visueel gehandicapten"
 
 msgid "Audio language selection 1"
 msgstr "Audio. Taalkeuze 1"
@@ -1610,7 +1611,7 @@ msgid "Cayman Islands"
 msgstr "Cayman eilanden"
 
 msgid "Center DVB subtitles"
-msgstr "Centreer DVB ondertitels"
+msgstr "Centreer ondertitels"
 
 msgid "Center time-labels and remove date"
 msgstr "Centreer de tijds-labels en verwijder de datum"
@@ -1978,7 +1979,8 @@ msgstr ""
 "\n"
 "U kunt kiezen uit automatisch, aan of uit."
 
-msgid "Configure if and how crypto icons will be shown in the channel selection list."
+#, fuzzy
+msgid "Configure if and how crypto icons will be shown in the channel selection list (left alignment only available in single line mode)."
 msgstr ""
 "Indien geactiveerd, dan kunt u aangeven of en waar het 'gecodeerd' icoon weergegeven wordt in de zenderlijst.\n"
 "\n"
@@ -1990,13 +1992,15 @@ msgstr ""
 "\n"
 "U kunt kiezen uit 'gedéactiveerd', 'geen timeout' of tussen 1-60 minuten."
 
-msgid "Configure if and how service type icons will be shown in the channel selection list."
+#, fuzzy
+msgid "Configure if and how service type icons will be shown in the channel selection list (left alignment only available in single line mode)."
 msgstr ""
 "Indien geactiveerd, dan kunt u in de zenderlijst aangeven of en via welke tuner dit kanaal ontvangen wordt. Dit kan DVB-S, DVB-C of DVB-T zijn.\n"
 "\n"
 "U kunt kiezen uit links of rechts van de zendernaam, of geen weergave."
 
-msgid "Configure if and how the record indicator will be shown in the channel selection list."
+#, fuzzy
+msgid "Configure if and how the record indicator will be shown in the channel selection list (left alignment only available in single line mode)."
 msgstr ""
 "Indien geactiveerd kunt u aangeven of, hoe en waar de 'opname indicatie' weergegeven wordt in de zenderlijst.\n"
 "\n"
@@ -2657,7 +2661,7 @@ msgid "DVB CI Delay"
 msgstr "DVB CI vertraging"
 
 msgid "DVB Subtitles PID & lang"
-msgstr "DVB ondertitels PID & taal"
+msgstr "DVD ondertitels PID & lang"
 
 msgid "DVB driver version: "
 msgstr "DVB driver versie: "
@@ -2808,7 +2812,7 @@ msgid "Delay in miliseconds between scrolling characters on display."
 msgstr "De onderlinge vertraging in msec tussen de scrollende karakters op het display."
 
 msgid "Delay when closing a stream relay service before reallocating the tuner for another service. Using '0' is only recommended for boxes with multiple satellite tuners."
-msgstr "Vertragingstijd tuner wanneer u van een streamrelay-zender naar een normale zender zapt. Het gebruik van '0' wordt enkel aanbevolen voor ontvangers met meerdere satelliettuners."
+msgstr ""
 
 msgid "Delete"
 msgstr "Verwijderen"
@@ -2867,11 +2871,13 @@ msgstr "Decodeer ontvangen http streams"
 msgid "Descramble sending http streams"
 msgstr "Decodeer verzonden http streams"
 
+#, fuzzy
 msgid "Descramble service via streamrelay port"
-msgstr "Decodeer streamrelay-zenders via poort"
+msgstr "Decodeer ontvangen http streams"
 
+#, fuzzy
 msgid "Descramble service via streamrelay url"
-msgstr "Decodeer streamrelay-zenders via url"
+msgstr "Decodeer ontvangen http streams"
 
 msgid "Description"
 msgstr "Beschrijving"
@@ -3369,9 +3375,6 @@ msgstr "Gebruik de ‘Neutrino manier' van zappen"
 msgid "Enable 5V for active antenna"
 msgstr "5V voor actieve antenne inschakelen"
 
-msgid "Enable blinking"
-msgstr "Knipperende pictogrammen inschakelen"
-
 msgid "Enable EIT EPG"
 msgstr "EIT EPG inschakelen"
 
@@ -3410,7 +3413,11 @@ msgid "Enable auto fastscan for %s"
 msgstr "Activeer automatische fastscan voor %s"
 
 msgid "Enable blink functionality for some areas like record icon."
-msgstr "Knipperfunctionaliteit inschakelen op sommige plekken zoals het opnamepictogram."
+msgstr ""
+
+#, fuzzy
+msgid "Enable blinking"
+msgstr "Virgin EPG inschakelen"
 
 msgid "Enable bluetooth audio"
 msgstr "Activeer bluetooth audio"
@@ -3544,7 +3551,7 @@ msgid "Enter an URL where alternative images could be listed for FlashImage. Ent
 msgstr "Voer een URL in waar alternatieve afbeeldingen kunnen worden gevonden t.b.v. FlashImage. Voer de tekst 'all' in voor automatische toegang tot een aantal alternatieve images."
 
 msgid "Enter if you are in the east or west hemisphere."
-msgstr "Geef aan of u zich in het oostelijk of westelijk halfrond bevindt."
+msgstr "Geef aan of je je in het oostelijk of westelijk halfrond bevindt."
 
 msgid "Enter if you are north or south of the equator."
 msgstr "Geef aan of u zich noordelijk of zuidelijk van de evenaar bevindt."
@@ -5216,6 +5223,9 @@ msgstr "Luxemburgs"
 msgid "MB"
 msgstr "MB"
 
+msgid "MENU"
+msgstr ""
+
 msgid "MHz"
 msgstr "MHz"
 
@@ -5591,7 +5601,7 @@ msgid "Myanmar"
 msgstr "Myanmar"
 
 msgid "N/A"
-msgstr "0.0"
+msgstr "0.0 "
 
 msgid "NEXT"
 msgstr "VOLGENDE"
@@ -6093,7 +6103,7 @@ msgid "Other Images"
 msgstr "Andere image"
 
 msgid "Other Subtitles & lang"
-msgstr "Andere Ondertitels & taal"
+msgstr "Andere Ondertitels & lang"
 
 msgid "Output"
 msgstr "Uitgang"
@@ -6143,8 +6153,15 @@ msgstr "PMT PID"
 msgid "PPanel"
 msgstr "PPanel"
 
+msgid "PREVIOUS"
+msgstr ""
+
 msgid "PULSe 4K(mini)"
 msgstr "PULSe 4K (mini)"
+
+#, fuzzy
+msgid "PVR"
+msgstr "OVR"
 
 msgid "Package list update"
 msgstr "Pakketlijst vernieuwen"
@@ -6320,10 +6337,10 @@ msgid "Play recorded movies..."
 msgstr "Opname afspelen..."
 
 msgid "Play service with streamrelay"
-msgstr "Speel deze zender af met streamrelay"
+msgstr ""
 
 msgid "Play service without streamrelay"
-msgstr "Speel deze zender af zonder streamrelay"
+msgstr ""
 
 msgid "Please add titles to the compilation."
 msgstr "Voeg aub titels toe aan de compilatie"
@@ -6558,14 +6575,11 @@ msgstr "Even geduld aub..."
 msgid "Please wait... Loading list..."
 msgstr "Even geduld... De lijst wordt geladen..."
 
-msgid "Plugins Browser"
+msgid "Plugin Browser"
 msgstr "Plugins zoekmenu"
 
 msgid "Plugin browser"
 msgstr "Plugin browser"
-
-msgid "Plugin Browser Style (Need Restart GUI)"
-msgstr "Plugin Browser Stijl (E2 herstart nodig)"
 
 msgid "Plugin manager activity information"
 msgstr "Pluginmanager achtergrondinformatie"
@@ -6916,6 +6930,10 @@ msgstr "Python frontend voor /tmp/mmi.socket"
 
 msgid "Python version: "
 msgstr "Pythonversie:"
+
+#, fuzzy
+msgid "Pythonscript"
+msgstr "Shellscript"
 
 msgid "Qatar"
 msgstr "Qatar"
@@ -8097,6 +8115,10 @@ msgstr "Service info - actieve tunerwaardes"
 msgid "Service info - tuner setting values"
 msgstr "Service info - tuner setting waardes"
 
+#, fuzzy
+msgid "Service info font size"
+msgstr "Zenderinfo"
+
 msgid ""
 "Service invalid!\n"
 "(Timeout reading PMT)"
@@ -8107,12 +8129,20 @@ msgstr ""
 msgid "Service name"
 msgstr "Zendernaam"
 
+#, fuzzy
+msgid "Service name font size"
+msgstr "Zendernaam"
+
 msgid ""
 "Service not found!\n"
 "(SID not found in PAT)"
 msgstr ""
 "Zender niet gevonden!\n"
 "(SID not found in PAT)"
+
+#, fuzzy
+msgid "Service number font size"
+msgstr "Wijzig de lettergrootte van de ondertitels"
 
 msgid "Service reference"
 msgstr "Zenderreferentie"
@@ -8205,7 +8235,8 @@ msgstr "Stel het wachtwoord van de OpenWebif in vanaf je Fallback tuner"
 msgid "Set the port of the OpenWebif from your fallback tuner"
 msgstr "Stel de poort van de OpenWebif in vanaf de Fallback tuner."
 
-msgid "Set the type of the progress indication in the channel selection screen."
+#, fuzzy
+msgid "Set the type of the progress indication in the channel selection screen (right alignment only available in single line mode)."
 msgstr ""
 "Met deze optie stelt u de weergave in van de programmavoortgangindicatie in de geopende zenderlijst in.\n"
 "\n"
@@ -8339,6 +8370,9 @@ msgstr "Toon coderingsinfo in de informatiebalk"
 
 msgid "Show detailed event info"
 msgstr "Gedetailleerde EPG info weergeven"
+
+msgid "Show disabled timers (local only)"
+msgstr ""
 
 msgid "Show event details"
 msgstr "EPG details weergeven"
@@ -8588,9 +8622,6 @@ msgstr "Enkel"
 
 msgid "Single EPG"
 msgstr "Zender EPG"
-
-msgid "Single line mode"
-msgstr "Enkele regel modus"
 
 msgid "Single satellite"
 msgstr "Eén satelliet"
@@ -9052,8 +9083,9 @@ msgstr "Opgeslagen positie"
 msgid "Stream"
 msgstr "Stream"
 
+#, fuzzy
 msgid "Stream Relay delay"
-msgstr "Stream Relay vertraging"
+msgstr "Scroll vertraging"
 
 msgid "Stream request"
 msgstr "Stream verzoek"
@@ -9304,7 +9336,7 @@ msgid "TXT PID"
 msgstr "TXT PID"
 
 msgid "TXT Subtitles page & lang"
-msgstr "TXT Ondertitels pagina & taal"
+msgstr "TXT Ondertitels page & lang"
 
 msgid "Table of contents for collection"
 msgstr "Inhoudsoverzicht voor de verzameling"
@@ -9386,7 +9418,7 @@ msgid "The DVD standard doesn't support H.264 (HDTV) video streams. Do you want 
 msgstr "De DVD standaard ondersteunt geen H.264 (HDTV) videostreams. Wilt u een DVD aanmaken met een speciaal formaat (veel DVD spelers kunnen dat niet afspelen)?"
 
 msgid "The IP address from the streamrelay server that is used to descramble services that can only be encrypted via streamrelay"
-msgstr "Streamrelay server IP-adres dat er gebruikt wordt om streamrelay zenders te decoderen."
+msgstr ""
 
 msgid "The PIN code has been changed successfully."
 msgstr "De pincode is gewijzigd."
@@ -9484,7 +9516,7 @@ msgid "The path %s already exists."
 msgstr "Het pad %s bestaat al."
 
 msgid "The port from the streamrelay server that is used to descramble services that can only be encrypted via streamrelay"
-msgstr "Streamrelay server poort dat er gebruikt wordt om streamrelay zenders te decoderen."
+msgstr ""
 
 #, python-format
 msgid "The results have been written to %s"
@@ -9565,6 +9597,9 @@ msgstr ""
 
 msgid "This DVD RW medium is already formatted - reformatting will erase all content on the disc."
 msgstr "Dit DVD-RW medium is reeds geformatteerd - herformatteren zal alles wissen op deze disk."
+
+msgid "This allows you to change the font size relative to skin size, so 1 increases by 1 point size, and -1 decreases by 1 point size"
+msgstr ""
 
 msgid "This bouquet is protected by a parental control PIN"
 msgstr "Dit bouquet is beschermd met een pincode t.b.v. het kinderslot."
@@ -10118,12 +10153,6 @@ msgstr "Tuvalu"
 msgid "Two"
 msgstr "Twee"
 
-msgid "Two lines"
-msgstr "Twee lijnen"
-
-msgid "Two lines and next event"
-msgstr "Twee lijnen + volgende programma"
-
 msgid "Type"
 msgstr "Type"
 
@@ -10378,6 +10407,10 @@ msgstr "Originele teletextpositie gebruiken"
 msgid "Use power measurement"
 msgstr "Meet stroomopname"
 
+#, fuzzy
+msgid "Use skin default"
+msgstr "Zet als standaard"
+
 msgid "Use the network wizard to configure selected network adapter"
 msgstr "Gebruik de netwerkwizard om de geselecteerde netwerkadapter te configureren"
 
@@ -10618,7 +10651,7 @@ msgid "Virtual keyboard"
 msgstr "Virtueel toetsenbord"
 
 msgid "Visually impaired commentary"
-msgstr "Commentaar t.b.v. blinden en slechtzienden"
+msgstr "Commentaar t.b.v. de visueel gehandicapten"
 
 msgid "Voltage mode"
 msgstr "Spanningsmodus"
@@ -11929,6 +11962,10 @@ msgstr "Geneeskunde/Filosofie/Psychologie"
 msgid "menu"
 msgstr "menu"
 
+#, fuzzy
+msgid "min"
+msgstr " min"
+
 msgid "mins"
 msgstr "min"
 
@@ -12358,6 +12395,14 @@ msgstr "Toerisme/Reizen"
 msgid "true"
 msgstr "juist"
 
+#, fuzzy
+msgid "two lines"
+msgstr "Twee lijnen"
+
+#, fuzzy
+msgid "two lines+next event"
+msgstr "Twee lijnen + volgende programma"
+
 msgid "type"
 msgstr "type"
 
@@ -12492,3 +12537,9 @@ msgstr "zapte"
 
 msgid "®"
 msgstr "®"
+
+msgid "°E"
+msgstr ""
+
+msgid "°W"
+msgstr ""
